--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple server application with Node and Express.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +22,8 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
-    "express": "^3.21.2"
+    "ejs": "^3.1.10",
+    "express": "^3.21.2",
+    "method-override": "^3.0.0"
   }
 }
